Modules/FaqAndParticipate/assets/sass/style.scss
.fp {
    &__faq,
    &__participate {
        color: $darkBlue;
    }
    &__participate {
        margin: 0 40px;
        @include mq(laptop) {
            margin: 0;
        }
        &__title {
            font-family: 'Futura';
            font-style: italic;
            font-weight: 750;
            font-size: 28px;
            width: 50%;
            line-height: 103%;
            text-transform: uppercase;
            color: #1E5C6B;
            @include mq(laptop) {
                width: 100%;
                font-size: 35px;
            }
        }
        h2 {
            margin: 24px 0 16px 0;
            @include mq(laptop) {
                margin: 2.4rem 0;
            }
        }
        &__repeater {
            &__single {
                flex-basis: 100%;
                margin: 16px 0;
                border-top: 1px solid $darkBlue;
                @include mq(laptop) {
                    flex-basis: 30%;
                }
                &__title {
                    margin-top: 16px;
                    font-weight: 750;
                    font-size: 18px;
                }
                &__desc {
                    font-size: 14px;
                    line-height: 19px;
                    font-weight: normal;
                    @include mq(tablet) {
                        font-weight: bold;
                    }
                }
            }
        }
        .apply__button {
            width: 170px;
            padding: 16px;
            a {
                font-style: italic;
                font-size: 14px;
                line-height: 17px;
                text-align: center;
                color: #FFFFFF;
            }
        }
    }
    &__faq {
        @include mq(tablet) {
            margin-top: 87px;
        }
        @include mq(laptop) {
            flex-direction: row !important;
        }
        &__left {
            flex-basis: 100%;
            @include mq(laptop) {
                flex-basis: 30%;
            }
            h2 {
                font-style: italic;
                font-weight: 750;
                font-size: 30px;
                line-height: 137.5%;
                margin-bottom: 32px;
                margin-bottom: 37px !important;
                @include mq(laptop) {
                    margin-bottom: 0;
                }
            }
            &__subtitle {
                background: rgba(247, 202, 198, 0.2);
                border-radius: 4px;
                padding: 26px 16px;
                text-align: center;
                margin-bottom: 32px;
                @include mq(laptop) {
                    margin-bottom: 0;
                    background: none;
                    border-radius: 0;
                    padding: unset;
                    text-align: unset;
                }
                span {
                    font-weight: bold;
                    font-style: italic;
                    font-size: 14px;
                }
                a {
                    font-weight: 750 !important;
                    font-size: 16px;
                    line-height: 103%;
                    letter-spacing: -0.07em;
                    color: $starOrange;
                    font-style: italic;
                    font-family: 'Futura' !important;
                }
            }
        }
        &__repeater {
            flex-basis: 100%;
            @include mq(laptop) {
                flex-basis: 70%;
            }
            &__single {
                display: flex;
                flex-basis: 100%;
                margin: 16px 0;
                border-top: 1px solid rgba(30, 92, 107, 0.3);
                @include mq(laptop) {
                    margin-right: 42px;
                    flex-basis: 40%;
                }
                span {
                    margin: 3.2rem 3rem 0 0;
                    font-style: italic;
                    font-weight: 750;
                    font-size: 14px;
                    line-height: 17px;
                    color: $darkBlue;
                }
                &__title {
                    font-style: italic;
                    font-weight: 650;
                    font-size: 14px;
                    line-height: 17px;
                    margin: 32px 0;
                }
                &__desc {
                    margin-top: 16px !important;
                    font-weight: 500;
                    font-size: 12px;
                    color: black;
                    margin-bottom: 32px;
                }
            }
        }
    }
}

